Identify Dissatisfied Employees

--- a/Guided Project-Clean And Analyze Employee Exit Surveys.ipynb
+++ b/Guided Project-Clean And Analyze Employee Exit Surveys.ipynb
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2850,7 +2850,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2861,7 +2861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2878,7 +2878,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2889,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -2903,7 +2903,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -2929,7 +2929,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,7 +2959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -2973,20 +2973,20 @@
        "12/2013     17\n",
        "06/2013     14\n",
        "09/2013     11\n",
-       "11/2013      9\n",
        "07/2013      9\n",
+       "11/2013      9\n",
        "10/2013      6\n",
        "08/2013      4\n",
-       "05/2013      2\n",
        "05/2012      2\n",
-       "09/2010      1\n",
-       "07/2012      1\n",
-       "07/2006      1\n",
+       "05/2013      2\n",
        "2010         1\n",
+       "07/2006      1\n",
+       "07/2012      1\n",
+       "09/2010      1\n",
        "Name: cease_date, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2998,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -3027,7 +3027,7 @@
        "Name: cease_date, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3040,7 +3040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -3092,7 +3092,7 @@
        "Name: dete_start_date, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3104,7 +3104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -3120,7 +3120,7 @@
        "Name: cease_date, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3148,7 +3148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -3213,7 +3213,7 @@
        "Name: institute_service, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3222,6 +3222,384 @@
     "# Create an institute_service column in dete_resignations\n",
     "dete_resignations['institute_service'] = dete_resignations['cease_date'] - dete_resignations['dete_start_date']\n",
     "dete_resignations['institute_service'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Identify Dissatisfied Employees\n",
+    "\n",
+    "Next, we'll identify any employees who resigned because they were dissatisfied.\n",
+    "\n",
+    "Below are the columns we'll use to categorize employees as \"dissatisfied\" from each dataframe. \n",
+    "\n",
+    "1. tafe_survey_updated:\n",
+    "    - `Contributing Factors. Dissatisfaction`\n",
+    "    - `Contributing Factors. Job Dissatisfaction`\n",
+    "2. dete_survey_updated:\n",
+    "    - `job_dissatisfaction`\n",
+    "    - `dissatisfaction_with_the_department`\n",
+    "    - `physical_work_environment`\n",
+    "    - `lack_of_recognition`\n",
+    "    - `lack_of_job_security`\n",
+    "    - `work_location`\n",
+    "    - `employment_conditions`\n",
+    "    - `work_life_balance`\n",
+    "    - `workload`\n",
+    "\n",
+    "If the employee indicated any of the factors above caused them to resign, we'll mark them as `dissatisfied` in a new column.\n",
+    "\n",
+    "To create the new column, we'll do the following:\n",
+    "\n",
+    "1. Convert the values in the `'Contributing Factors. Dissatisfaction'` and `'Contributing Factors. Job Dissatisfaction'` columns in the `tafe_resignations` dataframe to `True`, `False`, or `NaN` values.\n",
+    "2. If any of the columns listed above contain a `True` value, we'll add a True value to a new column named `dissatisfied`. To accomplish this, we'll use the `DataFrame.any()` method to do the following:\n",
+    "\n",
+    "    - Return `True` if any element in the selected columns above is `True`\n",
+    "    - Return `False` if none of the elements in the selected columns above is `True`\n",
+    "    - Return `NaN` if the value is `NaN`\n",
+    "    \n",
+    "After these changes, the new `dissatisfied` column will contain just the following values:\n",
+    "\n",
+    "   - `True`: indicates a person resigned because they were dissatisfied with the job\n",
+    "   - `False`: indicates a person resigned because of a reason other than dissatisfaction with the job\n",
+    "   - `NaN`: indicates the value is missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                                         277\n",
+       "Contributing Factors. Dissatisfaction      55\n",
+       "Name: Contributing Factors. Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                      270\n",
+       "Job Dissatisfaction     62\n",
+       "Name: Contributing Factors. Job Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Job Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Update values to True, False, or NaN\n",
+    "def update_vals(val):\n",
+    "    if pd.isnull(val):\n",
+    "        return np.nan\n",
+    "    elif val == '-':\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/pandas/core/frame.py:2540: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contributing Factors. Dissatisfaction</th>\n",
+       "      <th>Contributing Factors. Job Dissatisfaction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>277</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>55</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Contributing Factors. Dissatisfaction  \\\n",
+       "False                                    277   \n",
+       "True                                      55   \n",
+       "\n",
+       "       Contributing Factors. Job Dissatisfaction  \n",
+       "False                                        270  \n",
+       "True                                          62  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the values in the 'Contributing Factors. Dissatisfaction' \n",
+    "# and 'Contributing Factors. Job Dissatisfaction' columns \n",
+    "# in the tafe_resignations dataframe to True, False, or NaN \n",
+    "dis_cols = ['Contributing Factors. Dissatisfaction', 'Contributing Factors. Job Dissatisfaction']\n",
+    "tafe_resignations[dis_cols] = tafe_resignations[dis_cols].applymap(update_vals)\n",
+    "tafe_resignations[dis_cols].apply(pd.value_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/ipykernel/__main__.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  app.launch_new_instance()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False    241\n",
+       "True      91\n",
+       "Name: dissatisfied, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create 'dissatisfied' column for TAFE DF\n",
+    "# Contains True, if any of the 'Dissatisfaction' columns listed above contain a True value\n",
+    "tafe_resignations['dissatisfied'] = tafe_resignations[dis_cols].any(axis=1, skipna=False)\n",
+    "tafe_resignations['dissatisfied'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_dissatisfaction</th>\n",
+       "      <th>dissatisfaction_with_the_department</th>\n",
+       "      <th>physical_work_environment</th>\n",
+       "      <th>lack_of_recognition</th>\n",
+       "      <th>lack_of_job_security</th>\n",
+       "      <th>work_location</th>\n",
+       "      <th>employment_conditions</th>\n",
+       "      <th>work_life_balance</th>\n",
+       "      <th>workload</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>270</td>\n",
+       "      <td>282</td>\n",
+       "      <td>305</td>\n",
+       "      <td>278</td>\n",
+       "      <td>297</td>\n",
+       "      <td>293</td>\n",
+       "      <td>288</td>\n",
+       "      <td>243</td>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>41</td>\n",
+       "      <td>29</td>\n",
+       "      <td>6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>68</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       job_dissatisfaction  dissatisfaction_with_the_department  \\\n",
+       "False                  270                                  282   \n",
+       "True                    41                                   29   \n",
+       "\n",
+       "       physical_work_environment  lack_of_recognition  lack_of_job_security  \\\n",
+       "False                        305                  278                   297   \n",
+       "True                           6                   33                    14   \n",
+       "\n",
+       "       work_location  employment_conditions  work_life_balance  workload  \n",
+       "False            293                    288                243       284  \n",
+       "True              18                     23                 68        27  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create 'dissatisfied' column for DETE DF\n",
+    "# Contains True, if any of the following 'Dissatisfaction' columns listed above contain a True value\n",
+    "dete_dis_cols = ['job_dissatisfaction', 'dissatisfaction_with_the_department',\n",
+    "                'physical_work_environment', 'lack_of_recognition', 'lack_of_job_security', \n",
+    "                 'work_location', 'employment_conditions', 'work_life_balance', 'workload']\n",
+    "dete_resignations[dete_dis_cols].apply(pd.value_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/ipykernel/__main__.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  app.launch_new_instance()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False    162\n",
+       "True     149\n",
+       "Name: dissatisfied, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If the employee indicated any of the factors above caused them to resign,\n",
+    "# Mark them as 'dissatisfied' in a new column\n",
+    "dete_resignations['dissatisfied'] = dete_resignations[dete_dis_cols].any(axis=1, skipna=False)\n",
+    "dete_resignations['dissatisfied'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a copy of the results to avoid the SettingWithCopy Warning\n",
+    "dete_resignations_up = dete_resignations.copy()\n",
+    "tafe_resignations_up = tafe_resignations.copy()"
    ]
   },
   {
