Combine the Data

--- a/Guided Project-Clean And Analyze Employee Exit Surveys.ipynb
+++ b/Guided Project-Clean And Analyze Employee Exit Surveys.ipynb
@@ -3603,6 +3603,458 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine the Data\n",
+    "\n",
+    "So far, we've accomplished the following:\n",
+    "\n",
+    "- Renamed our columns\n",
+    "- Dropped any data not needed for our analysis\n",
+    "- Verified the quality of our data\n",
+    "- Created a new `institute_service` column\n",
+    "- Cleaned the `Contributing Factors` columns\n",
+    "- Created a new column `dissatisfied` indicating if an employee resigned because they were dissatisfied in some way\n",
+    "\n",
+    "Now, we're finally ready to combine our datasets! Our end goal is to aggregate the data according to the `institute_service` column.\n",
+    "\n",
+    "First, let's add a column to each dataframe that will allow us to easily distinguish between the two."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Add a column named `institute` to `dete_resignations_up`. \n",
+    "# Each row should contain the value DETE.\n",
+    "dete_resignations_up['institute'] = 'DETE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Add a column named `institute` to `tafe_resignations_up`. \n",
+    "# Each row should contain the value TAFE.\n",
+    "tafe_resignations_up['institute'] = 'TAFE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contributing Factors. Career Move - Private Sector</th>\n",
+       "      <th>Contributing Factors. Career Move - Public Sector</th>\n",
+       "      <th>Contributing Factors. Career Move - Self-employment</th>\n",
+       "      <th>Contributing Factors. Dissatisfaction</th>\n",
+       "      <th>Contributing Factors. Ill Health</th>\n",
+       "      <th>Contributing Factors. Interpersonal Conflict</th>\n",
+       "      <th>Contributing Factors. Job Dissatisfaction</th>\n",
+       "      <th>Contributing Factors. Maternity/Family</th>\n",
+       "      <th>Contributing Factors. NONE</th>\n",
+       "      <th>Contributing Factors. Other</th>\n",
+       "      <th>...</th>\n",
+       "      <th>role_service</th>\n",
+       "      <th>role_start_date</th>\n",
+       "      <th>separationtype</th>\n",
+       "      <th>south_sea</th>\n",
+       "      <th>study/travel</th>\n",
+       "      <th>torres_strait</th>\n",
+       "      <th>traumatic_incident</th>\n",
+       "      <th>work_life_balance</th>\n",
+       "      <th>work_location</th>\n",
+       "      <th>workload</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>Resignation-Other reasons</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>Resignation-Other reasons</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Resignation-Other reasons</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Resignation-Other employer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Resignation-Move overseas/interstate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 53 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Contributing Factors. Career Move - Private Sector   \\\n",
+       "0                                                NaN    \n",
+       "1                                                NaN    \n",
+       "2                                                NaN    \n",
+       "3                                                NaN    \n",
+       "4                                                NaN    \n",
+       "\n",
+       "  Contributing Factors. Career Move - Public Sector   \\\n",
+       "0                                                NaN   \n",
+       "1                                                NaN   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "  Contributing Factors. Career Move - Self-employment  \\\n",
+       "0                                                NaN    \n",
+       "1                                                NaN    \n",
+       "2                                                NaN    \n",
+       "3                                                NaN    \n",
+       "4                                                NaN    \n",
+       "\n",
+       "  Contributing Factors. Dissatisfaction Contributing Factors. Ill Health  \\\n",
+       "0                                   NaN                              NaN   \n",
+       "1                                   NaN                              NaN   \n",
+       "2                                   NaN                              NaN   \n",
+       "3                                   NaN                              NaN   \n",
+       "4                                   NaN                              NaN   \n",
+       "\n",
+       "  Contributing Factors. Interpersonal Conflict  \\\n",
+       "0                                          NaN   \n",
+       "1                                          NaN   \n",
+       "2                                          NaN   \n",
+       "3                                          NaN   \n",
+       "4                                          NaN   \n",
+       "\n",
+       "  Contributing Factors. Job Dissatisfaction  \\\n",
+       "0                                       NaN   \n",
+       "1                                       NaN   \n",
+       "2                                       NaN   \n",
+       "3                                       NaN   \n",
+       "4                                       NaN   \n",
+       "\n",
+       "  Contributing Factors. Maternity/Family Contributing Factors. NONE  \\\n",
+       "0                                    NaN                        NaN   \n",
+       "1                                    NaN                        NaN   \n",
+       "2                                    NaN                        NaN   \n",
+       "3                                    NaN                        NaN   \n",
+       "4                                    NaN                        NaN   \n",
+       "\n",
+       "  Contributing Factors. Other    ...    role_service role_start_date  \\\n",
+       "0                         NaN    ...             NaN          2006.0   \n",
+       "1                         NaN    ...             NaN          1997.0   \n",
+       "2                         NaN    ...             NaN          2009.0   \n",
+       "3                         NaN    ...             NaN          2008.0   \n",
+       "4                         NaN    ...             NaN          2009.0   \n",
+       "\n",
+       "                         separationtype south_sea study/travel torres_strait  \\\n",
+       "0             Resignation-Other reasons       NaN        False           NaN   \n",
+       "1             Resignation-Other reasons       NaN        False           NaN   \n",
+       "2             Resignation-Other reasons       NaN        False           NaN   \n",
+       "3            Resignation-Other employer       NaN        False           NaN   \n",
+       "4  Resignation-Move overseas/interstate       NaN        False           NaN   \n",
+       "\n",
+       "  traumatic_incident work_life_balance work_location  workload  \n",
+       "0              False             False         False     False  \n",
+       "1              False             False         False     False  \n",
+       "2              False             False         False     False  \n",
+       "3              False             False         False     False  \n",
+       "4              False             False         False     False  \n",
+       "\n",
+       "[5 rows x 53 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine both DFs\n",
+    "combined = pd.concat([dete_resignations_up, tafe_resignations_up], axis=0, ignore_index=True)\n",
+    "combined.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>cease_date</th>\n",
+       "      <th>dissatisfied</th>\n",
+       "      <th>employment_status</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>id</th>\n",
+       "      <th>institute</th>\n",
+       "      <th>institute_service</th>\n",
+       "      <th>position</th>\n",
+       "      <th>separationtype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>36-40</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Permanent Full-time</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>DETE</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>Resignation-Other reasons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41-45</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Permanent Full-time</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>DETE</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Guidance Officer</td>\n",
+       "      <td>Resignation-Other reasons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31-35</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Permanent Full-time</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>DETE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>Resignation-Other reasons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46-50</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Permanent Part-time</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>DETE</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Teacher Aide</td>\n",
+       "      <td>Resignation-Other employer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31-35</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Permanent Full-time</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>DETE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>Resignation-Move overseas/interstate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age  cease_date dissatisfied    employment_status  gender    id  \\\n",
+       "0  36-40      2012.0        False  Permanent Full-time  Female   4.0   \n",
+       "1  41-45      2012.0         True  Permanent Full-time  Female   6.0   \n",
+       "2  31-35      2012.0        False  Permanent Full-time  Female   9.0   \n",
+       "3  46-50      2012.0         True  Permanent Part-time  Female  10.0   \n",
+       "4  31-35      2012.0        False  Permanent Full-time    Male  12.0   \n",
+       "\n",
+       "  institute institute_service          position  \\\n",
+       "0      DETE                 7           Teacher   \n",
+       "1      DETE                18  Guidance Officer   \n",
+       "2      DETE                 3           Teacher   \n",
+       "3      DETE                15      Teacher Aide   \n",
+       "4      DETE                 3           Teacher   \n",
+       "\n",
+       "                         separationtype  \n",
+       "0             Resignation-Other reasons  \n",
+       "1             Resignation-Other reasons  \n",
+       "2             Resignation-Other reasons  \n",
+       "3            Resignation-Other employer  \n",
+       "4  Resignation-Move overseas/interstate  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop any columns with less than 500 non-null values\n",
+    "combined_updated = combined.dropna(thresh=500, axis=1)\n",
+    "combined_updated.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
